test/expr/unary/switch_expr_global_self_ref.code
// RUN: %target-typecheck-verify-language

immutable x = switch Bool.random() { case true: x case false: 0 }
// expected-error@-1 {{cannot reference invalid declaration 'x'}}
// expected-note@-2 {{'x' declared here}}
